# assistant-jarvis

./: .env.development  .env.production  .eslintignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  fix-rust.sh  package-lock.json  package.json  tsconfig.json
desktop/engine/: .gitignore  README.md  build.py  build_daemon.bat  build_daemon.sh  config.py  daemon.py  daemon.py.old  daemon_final.py  daemon_minimal.py  daemon_simple.py  database.py  function_registry.py  jarvis-engine-daemon.spec  jarvis-engine.spec  logger.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  test_daemon_executable.sh  test_daemon_manual.py  test_daemon_simple.py  test_daemon_working.py  test_function_registry.py  test_imports.py  test_incremental.sh
desktop/engine/api/: server.py
desktop/engine/api/routes/: agent.py  assistant.py  (+14 more)
desktop/engine/core/: __init__.py
desktop/engine/docs/: PERFORMANCE_OPTIMIZATION.md
desktop/engine/models/: __init__.py  agent.py  assistant.py  call.py  common.py  knowledge.py  knowledge_base.py  mcp.py  multiagent.py  system.py  tools.py  workflow.py
desktop/engine/tests/: CROSS_PLATFORM_TEST_SUMMARY.md  E2E_TEST_GUIDE.md  MACOS_TEST_REPORT.md  PACKAGING_TEST_GUIDE.md  PERFORMANCE_TEST_REPORT.md  README.md  TASK_14_COMPLETION_SUMMARY.md  TEST_IMPLEMENTATION_SUMMARY.md  WINDOWS_TEST_GUIDE.md  conftest.py  run_e2e_tests.bat  run_e2e_tests.sh  run_macos_tests.sh  run_windows_tests.bat  test_agent_functionality.py  test_agent_service.py  test_auth.py  test_daemon_memory_leak.py  test_daemon_performance.py  test_daemon_unit.py  test_e2e.py  test_error_handling.py  test_gui_functionality.py  test_knowledge_base_functionality.py  test_knowledge_service.py  test_macos_functionality.py  test_macos_platform.py  test_macos_simple.py  test_multimodal.py  test_performance.py  test_performance_acceptance.py  test_phase2_integration.py  test_recorder_functionality.py  test_recorder_service.py  test_regression.py  test_security.py  test_settings_functionality.py  test_stability.py  test_system_monitor.py  test_windows_platform.py  (+4 more)
desktop/engine/tools/: __init__.py
desktop/engine/utils/: config.py  datastore.py
desktop/frontend/src-tauri/: Cargo.toml  README.md  build-bundle.sh  build-python.sh  build-simple.sh  build-with-pyinstaller.sh  prepare-resources.sh  tauri.conf.json  tauri.dev.conf.json
(+428 files in other folders)
