[project]
name = "jarvis-engine"
version = "0.1.0"
description = "Jarvis PC Engine - Python Sidecar"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "agentscope>=0.0.3",
    "playwright>=1.42.0",
    "pynput>=1.7.6",
    "psutil>=5.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
