[package]
name = "jarvis-desktop"
version = "0.1.0"
edition = "2021"
description = "Jarvis Desktop App"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-single-instance = "2.3"
anyhow = "1.0"
parking_lot = "0.12"
dirs = "5.0"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
